# Address-Book-Portal

./: .coverage  .coveragerc  .env.example  .gitignore  Address Book Portal.txt  README.md  address_book_portal_docs.md  conftest.py  pyproject.toml  railway.json  requirements-lock.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
Schema/: README.md  contact.schema.json  database_schema.sql  email.schema.json  group.schema.json  phone.schema.json  tag.schema.json
config/: asgi.py  database.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
config/tests/: test_database.py  test_prod_settings.py
contacts/: admin.py  apps.py  csv_utils.py  exporters.py  forms.py  importers.py  models.py  session_selection.py  signals.py  signup_urls.py  urls.py  utils.py  validators.py  views.py
contacts/fixtures/: seed_data.json
contacts/migrations/: 0001_initial.py  0002_case_insensitive_group_tag_names.py  0003_scalar_sync_flags.py  0004_contact_uuid.py
contacts/templatetags/: querystring.py
contacts/tests/: test_admin.py  test_applied_fixes.py  test_audit_fixes.py  test_auth.py  test_contact_photo.py  test_coverage_max.py  test_dashboard.py  test_exporters_unit.py  test_final_coverage.py  test_forms.py  test_forms_extended.py  test_import_export.py  test_importers_unit.py  test_integration.py  test_media_import_fixes.py  test_models.py  test_models_extended.py  test_utils.py  (+10 more)
docs/: DEPLOYMENT.md  REPORT.md  SCHEMA.md  SECURITY.md  SPEC.md  TESTING.md  TRACEABILITY.md
scripts/: release.ps1  release.sh
templates/: base.html
(+33 files in other folders)
